PIP-289 Start 6.0.0-SNAPSHOT