@@ -3,14 +3,14 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.snomed.otf</groupId>
-	<version>5.18.0-SNAPSHOT</version>
+	<version>6.0.0-SNAPSHOT</version>
 	<artifactId>reporting-engine</artifactId>
 	<packaging>pom</packaging>
 
 	<parent>
 		<groupId>org.snomed</groupId>
 		<artifactId>snomed-parent-bom</artifactId>
-		<version>1.1.0-SNAPSHOT</version>
+		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 
 	<modules>
@@ -51,5 +51,38 @@
 			<url>https://nexus3.ihtsdotools.org/repository/maven-snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
-
+	<build>
+		<plugins>
+			<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<configuration>
+				<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+			</configuration>
+			<version>3.0.0</version>
+			</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-jar-plugin</artifactId>
+			<version>3.3.0</version>
+			<executions>
+				<execution>
+					<id>default-jar</id>
+					<phase>package</phase>
+					<goals>
+						<goal>jar</goal>
+					</goals>
+					<configuration>
+						<archive>
+							<manifestEntries>
+								<!-- required by owl toolkit -->
+								<Add-Opens>java.base/java.lang java.base/java.util</Add-Opens>
+							</manifestEntries>
+						</archive>
+					</configuration>
+				</execution>
+			</executions>
+		</plugin>
+		</plugins>
+	</build>
 </project>
